@@ -2,6 +2,7 @@ IIPImage - High Resolution Streaming Image Server
 =================================================
 
 [![Build Status](https://travis-ci.org/ruven/iipsrv.svg)](https://travis-ci.org/ruven/iipsrv)
+[![Coverity Scan](https://img.shields.io/coverity/scan/3997.svg)](https://scan.coverity.com/projects/ruven-iipsrv)
 
 ABOUT
 -----
@@ -38,6 +39,9 @@ doc subdirectory
 
 LICENCE
 -------
+
+[![badge-license]][link-license]
+
 iipsrv is released under the GNU General Public License (GPL). See the copyright
 notice COPYING in this directory for licensing details or go to
 http://www.gnu.org/licenses/gpl.html for more details.
